--- a/frontend/src/styles/CryptoInfo.css
+++ b/frontend/src/styles/CryptoInfo.css
@@ -10,7 +10,7 @@
     background: #eeffcd;
     border: 1px solid #ddd;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    padding: 15px;
+    padding: 15x;
     border-radius: 4px;
     width: calc(33.333% - 40px); /* three boxes per row */
     box-sizing: border-box;
@@ -21,13 +21,10 @@ h3 {
     font-weight: bold;
     color: black;
     text-align: center;
-    margin-bottom: 10px;
-    padding-bottom: 5px;
 }
 
 p {
-    font-size: 1em;
+    font-size: 1.5em;
     color: #333;
     text-align: center;
-    font-weight: bold;
 }
